--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "**From Laughter to Tears: List of ANIME to watch**",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
